--- a/Studio.html
+++ b/Studio.html
@@ -106,7 +106,7 @@
       <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-4 mb-1">
 
         <!-- Content -->
-        <h5 class="font-weight-bold text-uppercase mb-4 footerheadline">Footer Content</h5>
+        <h5 class="font-weight-bold text-uppercase mb-4 footerheadline">CONTENT</h5>
         <p class="paragraph">This is the Official Website of Marshall_Stan_Mather Recording Studio</p>
         <p class="paragraph">This Website Contains all Updates about the artist and the recent songs and upcoming Tracks
           and the Links are given in the related Buttons to download or watch. Social Medias are linked to know the quires from the listeners
@@ -181,7 +181,7 @@
         <h5 class="font-weight-bold text-uppercase mb-4 footerheadline">Follow Us</h5>
 
         <!-- Facebook -->
-        <a type="button" class="btn-floating btn-fb" style="font-size:50px;">
+        <a href="https://www.facebook.com/vinayak.kanchagar.54/" type="button" class="btn-floating btn-fb" style="font-size:50px;">
           <i class="fab fa-facebook-f" style="color: darkred;"></i>
         </a>
         <br><br>
@@ -207,7 +207,7 @@
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3 paragraph">© 2020 Copyright:
-    <a href="https://www.reverbnation.com/marshallstanmather"> MarshallStanMather/ReverbNation.com</a>
+    <a href="https://www.reverbnation.com/marshallstanmather"> www.marshallStanMather.com</a>
   </div>
   <!-- Copyright -->
 
